<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.shrikantbadwaik.casestudy.SignInActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/Welcome_to_Expense_Manager"
        android:textSize="25dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/Enter_User_Name"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/Enter_Password"
        android:inputType="textPassword"
        android:textSize="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <CheckBox
            android:id="@+id/checkRememberMe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:text="@string/Remember_me"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="6dp"
            android:clickable="true"
            android:onClick="forgotPassword"
            android:text="@string/Forgot_Password"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="15dp"
            android:textStyle="italic" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="signUp"
            android:text="@string/Sign_Up"
            android:textAllCaps="false"
            android:textSize="15dp" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="signIn"
            android:text="@string/Sign_In"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </RelativeLayout>
</LinearLayout>
