<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1"
    tools:context="com.shrikantbadwaik.casestudy.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/Welcome_Message"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="25dp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="right"
            android:text="It's free and always will be..."
            android:textSize="20dp" />

        <EditText
            android:id="@+id/editFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:hint="@string/Enter_Full_Name"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/Enter_User_Name"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/Enter_Password"
            android:inputType="textPassword"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/editConfirmPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/ReEnter_Password"
            android:inputType="textPassword"
            android:textSize="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:onClick="register"
                android:text="@string/Register"
                android:textAllCaps="false"
                android:textSize="15dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="0.5"
                android:onClick="clear"
                android:text="@string/Clear"
                android:textAllCaps="false"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
