<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.shrikantbadwaik.casestudy.ForgotPasswordActivity">

    <EditText
        android:id="@+id/editNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/Enter_New_Password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editConfirmNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/ReEnter_Password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="savePassword"
            android:text="@string/Save"
            android:textAllCaps="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:onClick="clear"
            android:text="@string/Clear"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>
