<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1"
    android:clickable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context="com.shrikantbadwaik.tablayoutdemo.AddNewExpenseActivity">

    <TextView
        android:id="@+id/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textSize="25dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:id="@+id/datePicker"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/setDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="setDate"
            android:text="@string/Set_Date"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </RelativeLayout>

    <EditText
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/Enter_Item_Name"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/Enter_Item_Description"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/itemAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/Enter_Amount"
        android:inputType="numberDecimal"
        android:textSize="15dp" />

    <Spinner
        android:id="@+id/paymentSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:onClick="saveExpense"
            android:text="@string/Save"
            android:textAllCaps="false"
            android:textSize="15dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="clearExpense"
            android:text="@string/Clear"
            android:textAllCaps="false"
            android:textSize="15dp" />
    </RelativeLayout>
</LinearLayout>
