<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/a1"
    android:orientation="vertical"
    tools:context="com.shrikantbadwaik.casestudy.CalculateExpenseActivity">

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp">

            <TextView
                android:id="@+id/textExpenseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/Date"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textExpenseCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/Name"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textExpenseName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/Category"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textExpenseAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/Amount"
                android:textSize="16dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textExpensePayMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/Mode"
                android:textSize="16dp"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/selectedCategoryView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="false" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.1"
                android:text="@string/Total_Expense"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/Rs"
                android:textDirection="rtl"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editTotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:editable="false"
                android:textSize="15dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.1"
                android:text="@string/Daily_Expense"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/Rs"
                android:textDirection="rtl"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editDaily"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:editable="false"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.1"
                android:text="@string/Max_Expense"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/Rs"
                android:textDirection="rtl"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editMax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:editable="false"
                android:textSize="15dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.1"
                android:text="@string/Min_Expense"
                android:textSize="15dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:text="@string/Rs"
                android:textDirection="rtl"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/editMin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:editable="false"
                android:textSize="15dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>
